# apc

./: .gitignore  Cargo.toml  LICENSE  Readme.md  doc.ipynb  list.md  main.jl  rustfmt.toml
F64x2/: Cargo.toml  build.rs
F64x2/benches/: exp.rs  low-level.rs
F64x2/data/: expm1_table.txt
F64x2/f64xn-impl-arith/: Cargo.toml
F64x2/f64xn-impl-arith/src/: certified_ops.rs  eft.rs  lib.rs
F64x2/f64xn-impl-func/: Cargo.toml
F64x2/f64xn-impl-func/src/: brentq.rs  lib.rs  remez.rs
F64x2/multi-floats-impl/: Cargo.toml
F64x2/multi-floats-impl/src/: lib.rs
F64x2/src/: blocks.rs  functions.rs  impl_traits.rs  lib.rs  remez.rs  test_utils.rs  traits.rs
F64x2/src/f64xn/: mod.rs  multi_floats.rs
benches/: bandwidth_interp.rs  brentq.rs  fast_phi.rs  my_benchmarks.rs
src/: adaptive_interp.rs  apcdb.rs  bandwidth_interp.rs  bandwidth_limited.rs  brentq.rs  cache_stat.rs  cheby_series.rs  constants.rs  context.rs  f64xn.rs  fast_phi.rs  galway.rs  gamma.rs  gamma2.rs  illinois.rs  latex.html  lib.rs  lmfdb.rs  main.rs  platt.rs  platt_integral.rs  power_series.rs  power_series_bak.rs  profiler.rs  riemann_siegel.rs  rs_theta.rs  rs_z.rs  sieve.rs  sum_trunc_dirichlet.rs  test_utils.rs  traits.rs  types.rs  unchecked_cast.rs  zeta.rs  zeta_zeros.rs
src/contexts/: bernoulli.rs  complex_functions.rs  erfc.rs  exp_poly_approx.rs  factorial.rs  gabcke_est.rs  gabcke_series.rs  gamma.rs  lazy_static.rs  loggamma.rs  mod.rs  riemann_siegel_theta.rs  riemann_siegel_theta_integral.rs  sinc.rs  utils.rs
src/f64xn/: blocks.rs  def.rs  functions.rs  impl_traits.rs  remez.rs
utils/: gen_float_const.jl  gen_gabcke.jl  platt.jl
