[package]
name = "apc"
version = "0.2.3"
authors = ["Yuping Luo <roosephu@gmail.com>"]
edition = "2018"
description = "Analytical Prime Counting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
rug = "1.11.0"
num = "0.4.0"
rustfft =  { path = "../RustFFT" }
# rustfft =  { local = "../RustFFT", git = "https://github.com/roosephu/RustFFT.git" }
GSL = "4.0.0"
bit-vec = "0.6.3"
log = "0.4.14"
env_logger = "0.8.3"
num-traits = "0.2.14"
num-complex = "0.4.0"
rand = "0.8.3"
clap = "3.0.0-beta.2"
byteorder = "1.4.3"
F64x2 = { path = "./F64x2" }
