[package]
name = "apc"
version = "0.2.7"
authors = ["Yuping Luo <roosephu@gmail.com>"]
edition = "2018"
description = "Analytical Prime Counting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[[bin]]
name = "apc"
path = "src/main.rs"

[[bin]]
name = "profile"
path = "src/main.rs"

[dependencies]
num = "0.4.0"
rustfft =  { path = "../RustFFT" }
# rustfft =  { local = "../RustFFT", git = "https://github.com/roosephu/RustFFT.git" }
GSL = "4.0.0"
log = "0.4.14"
env_logger = "0.8.3"
num-traits = "0.2.14"
num-complex = "0.4.0"
rand = "0.8.3"
clap = "3.0.0-beta.2"
byteorder = "1.4.3"
F64x2 = { path = "./F64x2" }
primesieve-sys = "0.2.3"
parse_int = "0.5.0"
libc = "0.2.94"

[features]
verify_fast_phi = []
verify_all = ["verify_fast_phi"]
