[package]
name = "apc"
version = "0.2.7"
authors = ["Yuping Luo <roosephu@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Analytical Prime Counting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[[bin]]
name = "profile"
path = "src/bin/apc.rs"

[[bench]]
name = "my_benchmarks"
harness = false

[dependencies]
num = "0.4.0"
rustfft =  { git = "https://github.com/roosephu/RustFFT.git", optional = true }
GSL = "6.0.0"
log = "0.4.14"
env_logger = "0.9.0"
num-traits = "0.2.14"
num-complex = "0.4.0"
rand = "0.8.3"
clap = "2.33.3"
byteorder = "1.4.3"
F64x2 = { path = "./F64x2" }
primesieve-sys = "0.2.3"
libc = "0.2.94"
cfg-if = "1.0.0"
paste = "1.0.6"
rug = { version = "1.14.0", default-features = false, features = ["integer", "float", "complex", "serde"] }

[features]
zeta = ["rustfft"]
galway = ["zeta"]
doc = []

[dev-dependencies]
criterion = "0.3.4"
