[package]
name = "F64x2"
version = "0.1.0"
authors = ["Yuping Luo <roosephu@gmail.com>"]
edition = "2021"

[lib]

[[bench]]
name = "low-level"
harness = false

[[bench]]
name = "exp"
harness = false

[dependencies]
num-traits = "0.2.14"
num = "0.4.0"
f64xn-impl-arith = { path = './f64xn-impl-arith' }
f64xn-impl-func = { path = './f64xn-impl-func' }

# [dev-dependencies]
criterion = { version = "0.3.5", features = ["real_blackbox"] }
rand = "0.8.4"
rug = "1.14.0"

# [build-dependencies]
# syn = { version = "1.0.82", features = ["full"] }
# quote = "1.0.10"
# proc-macro2 = "1.0.34"
